--- a/Harden System Security/Strings/ES/SecurityMeasures.resw
+++ b/Harden System Security/Strings/ES/SecurityMeasures.resw
@@ -823,12 +823,6 @@
 <data name="DynamicCodeSettingsEdge-Edge" xml:space="preserve">
     <value>Evitar que el proceso del navegador genere código dinámico</value>
 </data>
-<data name="DisableTLS10-TLS" xml:space="preserve">
-    <value>Deshabilitar TLS v1</value>
-</data>
-<data name="DisableTLS11-TLS" xml:space="preserve">
-    <value>Deshabilitar TLS v1.1</value>
-</data>
 <data name="DisableNULL-TLS" xml:space="preserve">
     <value>Deshabilitar el Cifrado Débil para Schannel: NULL</value>
 </data>
@@ -924,5 +918,29 @@
 </data>
 <data name="LockoutDuration-LockScreen" xml:space="preserve">
     <value>Establecer el reinicio del contador de bloqueo de cuenta en 1440 minutos o 1 día.</value>
+</data>
+<data name="DisableTLS10ClientPart1-TLS" xml:space="preserve">
+    <value>Deshabilitar cliente TLS v1 - Parte 1</value>
+</data>
+<data name="DisableTLS10ClientPart2-TLS" xml:space="preserve">
+    <value>Deshabilitar cliente TLS v1 - Parte 2</value>
+</data>
+<data name="DisableTLS10ServerPart1-TLS" xml:space="preserve">
+    <value>Deshabilitar servidor TLS v1 - Parte 1</value>
+</data>
+<data name="DisableTLS10ServerPart2-TLS" xml:space="preserve">
+    <value>Deshabilitar servidor TLS v1 - Parte 2</value>
+</data>
+<data name="DisableTLS11ClientPart1-TLS" xml:space="preserve">
+    <value>Deshabilitar cliente TLS v1.1 - Parte 1</value>
+</data>
+<data name="DisableTLS11ClientPart2-TLS" xml:space="preserve">
+    <value>Deshabilitar cliente TLS v1.1 - Parte 2</value>
+</data>
+<data name="DisableTLS11ServerPart1-TLS" xml:space="preserve">
+    <value>Deshabilitar servidor TLS v1.1 - Parte 1</value>
+</data>
+<data name="DisableTLS11ServerPart2-TLS" xml:space="preserve">
+    <value>Deshabilitar servidor TLS v1.1 - Parte 2</value>
 </data>
 </root>
