--- a/Harden System Security/Strings/ml-IN/SecurityMeasures.resw
+++ b/Harden System Security/Strings/ml-IN/SecurityMeasures.resw
@@ -823,12 +823,6 @@
 <data name="DynamicCodeSettingsEdge-Edge" xml:space="preserve">
     <value>ബ്രൗസർ പ്രക്രിയയെ ഡൈനാമിക് കോഡ് സൃഷ്ടിക്കുന്നതിൽ നിന്ന് തടയുക</value>
 </data>
-<data name="DisableTLS10-TLS" xml:space="preserve">
-    <value>TLS v1 അപ്രാപ്തമാക്കുക</value>
-</data>
-<data name="DisableTLS11-TLS" xml:space="preserve">
-    <value>TLS v1.1 അപ്രാപ്തമാക്കുക</value>
-</data>
 <data name="DisableNULL-TLS" xml:space="preserve">
     <value>Schannel-നുള്ള ദുർബല സൈഫർ അപ്രാപ്തമാക്കുക: NULL</value>
 </data>
@@ -924,5 +918,29 @@
 </data>
 <data name="LockoutDuration-LockScreen" xml:space="preserve">
     <value>അക്കൗണ്ട് ലോക്കൗട്ട് കൗണ്ടർ റീസെറ്റ് 1440 മിനിറ്റ് അല്ലെങ്കിൽ 1 ദിവസമായി സജ്ജമാക്കുക.</value>
+</data>
+<data name="DisableTLS10ClientPart1-TLS" xml:space="preserve">
+    <value>TLS v1 ക്ലയന്റ് നിർജ്ജീവമാക്കുക - ഭാഗം 1</value>
+</data>
+<data name="DisableTLS10ClientPart2-TLS" xml:space="preserve">
+    <value>TLS v1 ക്ലയന്റ് നിർജ്ജീവമാക്കുക - ഭാഗം 2</value>
+</data>
+<data name="DisableTLS10ServerPart1-TLS" xml:space="preserve">
+    <value>TLS v1 സെർവർ നിർജ്ജീവമാക്കുക - ഭാഗം 1</value>
+</data>
+<data name="DisableTLS10ServerPart2-TLS" xml:space="preserve">
+    <value>TLS v1 സെർവർ നിർജ്ജീവമാക്കുക - ഭാഗം 2</value>
+</data>
+<data name="DisableTLS11ClientPart1-TLS" xml:space="preserve">
+    <value>TLS v1.1 ക്ലയന്റ് നിർജ്ജീവമാക്കുക - ഭാഗം 1</value>
+</data>
+<data name="DisableTLS11ClientPart2-TLS" xml:space="preserve">
+    <value>TLS v1.1 ക്ലയന്റ് നിർജ്ജീവമാക്കുക - ഭാഗം 2</value>
+</data>
+<data name="DisableTLS11ServerPart1-TLS" xml:space="preserve">
+    <value>TLS v1.1 സെർവർ നിർജ്ജീവമാക്കുക - ഭാഗം 1</value>
+</data>
+<data name="DisableTLS11ServerPart2-TLS" xml:space="preserve">
+    <value>TLS v1.1 സെർവർ നിർജ്ജീവമാക്കുക - ഭാഗം 2</value>
 </data>
 </root>
